<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/currencyToSpinner"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/currency"
        android:entries="@array/currencies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurrencyFrom" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/subheading"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.04" />

    <Spinner
        android:id="@+id/currencyFromSpinner"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="39dp"
        android:background="@color/currency"
        android:backgroundTint="@null"
        android:entries="@array/currencies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editCurrencyFrom"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/currency"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyFromSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editCurrencyTo"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@color/currency"
        android:ems="10"
        android:hint="@string/to"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyToSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/currencySubmit"
        android:layout_width="131dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/currency"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/buttonText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurrencyTo"
        app:layout_constraintVertical_bias="0.261" />

</androidx.constraintlayout.widget.ConstraintLayout>